// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage Should post error to Slack if environment is production 1`] = `
[
  {
    "message": "Some error message",
  },
  {
    "backendStatus": {},
    "cellInfo": {
      "focus": {
        "key": "louvain",
        "store": "cellSets",
      },
      "groupedTrack": "louvain",
      "selectedTracks": [
        "louvain",
      ],
    },
    "cellMeta": {
      "doubletScores": {
        "data": [],
        "error": false,
        "loading": true,
      },
      "mitochondrialContent": {
        "data": [],
        "error": false,
        "loading": true,
      },
      "numOfGenes": {
        "data": [],
        "error": false,
        "loading": true,
      },
      "numOfUmis": {
        "data": [],
        "error": false,
        "loading": true,
      },
    },
    "cellSets": {
      "error": false,
      "hidden": Set {},
      "hierarchy": [],
      "initialLoadPending": true,
      "loading": false,
      "properties": {},
      "selected": [],
      "updatingClustering": false,
    },
    "componentConfig": {},
    "differentialExpression": {
      "comparison": {
        "advancedFilters": [],
        "group": {
          "between": {
            "basis": null,
            "cellSet": null,
            "compareWith": null,
          },
          "within": {
            "basis": null,
            "cellSet": null,
            "compareWith": null,
          },
        },
        "ordering": {
          "orderBy": "logFC",
          "orderDirection": "DESC",
        },
        "type": "within",
      },
      "properties": {
        "comparisonGroup": {},
        "comparisonType": null,
        "data": [],
        "error": false,
        "loading": false,
        "total": 0,
      },
    },
    "embeddings": {},
    "experimentSettings": {
      "info": {
        "experimentId": null,
        "experimentName": null,
        "pipelineVersion": null,
        "sampleIds": [],
      },
      "originalProcessing": {},
      "processing": {
        "meta": {
          "changedQCFilters": Set {},
          "completingStepError": false,
          "loading": false,
          "loadingSettingsError": false,
        },
      },
    },
    "experiments": {
      "ids": [],
      "meta": {
        "activeExperimentId": null,
        "error": false,
        "loading": false,
        "saving": false,
      },
    },
    "genes": {
      "expression": {
        "downsampledCellOrder": [],
        "downsampledMatrix": ExpressionMatrix {
          "geneIndexes": {},
          "rawGeneExpressions": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
          "setGeneExpression": [Function],
          "stats": {
            "rawMean": [],
            "rawStdev": [],
            "truncatedMax": [],
            "truncatedMin": [],
          },
          "truncatedGeneExpressions": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
          "zScore": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
        },
        "error": false,
        "loading": [],
        "matrix": ExpressionMatrix {
          "geneIndexes": {},
          "rawGeneExpressions": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
          "setGeneExpression": [Function],
          "stats": {
            "rawMean": [],
            "rawStdev": [],
            "truncatedMax": [],
            "truncatedMin": [],
          },
          "truncatedGeneExpressions": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
          "zScore": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
        },
        "views": {},
      },
      "focused": undefined,
      "markers": {
        "ETag": null,
        "error": false,
        "loading": false,
      },
      "properties": {
        "data": {},
        "loading": [],
        "views": {},
      },
      "selected": [],
    },
    "layout": {
      "panel": "Gene list",
      "windows": {
        "direction": "row",
        "first": {
          "direction": "column",
          "first": {
            "direction": "row",
            "first": "UMAP",
            "second": "Cell sets and Metadata",
            "splitPercentage": 60,
          },
          "second": "Heatmap",
          "splitPercentage": 50,
        },
        "second": "Genes",
        "splitPercentage": 70,
      },
    },
    "networkResources": {
      "domainName": "scp.biomage.net",
      "environment": "production",
    },
    "samples": {
      "meta": {
        "error": false,
        "loading": false,
        "saving": false,
        "validating": [],
      },
    },
    "user": {
      "current": null,
    },
  },
]
`;

exports[`ErrorPage Should post error to Slack if environment is staging 1`] = `
[
  {
    "message": "Some error message",
  },
  {
    "backendStatus": {},
    "cellInfo": {
      "focus": {
        "key": "louvain",
        "store": "cellSets",
      },
      "groupedTrack": "louvain",
      "selectedTracks": [
        "louvain",
      ],
    },
    "cellMeta": {
      "doubletScores": {
        "data": [],
        "error": false,
        "loading": true,
      },
      "mitochondrialContent": {
        "data": [],
        "error": false,
        "loading": true,
      },
      "numOfGenes": {
        "data": [],
        "error": false,
        "loading": true,
      },
      "numOfUmis": {
        "data": [],
        "error": false,
        "loading": true,
      },
    },
    "cellSets": {
      "error": false,
      "hidden": Set {},
      "hierarchy": [],
      "initialLoadPending": true,
      "loading": false,
      "properties": {},
      "selected": [],
      "updatingClustering": false,
    },
    "componentConfig": {},
    "differentialExpression": {
      "comparison": {
        "advancedFilters": [],
        "group": {
          "between": {
            "basis": null,
            "cellSet": null,
            "compareWith": null,
          },
          "within": {
            "basis": null,
            "cellSet": null,
            "compareWith": null,
          },
        },
        "ordering": {
          "orderBy": "logFC",
          "orderDirection": "DESC",
        },
        "type": "within",
      },
      "properties": {
        "comparisonGroup": {},
        "comparisonType": null,
        "data": [],
        "error": false,
        "loading": false,
        "total": 0,
      },
    },
    "embeddings": {},
    "experimentSettings": {
      "info": {
        "experimentId": null,
        "experimentName": null,
        "pipelineVersion": null,
        "sampleIds": [],
      },
      "originalProcessing": {},
      "processing": {
        "meta": {
          "changedQCFilters": Set {},
          "completingStepError": false,
          "loading": false,
          "loadingSettingsError": false,
        },
      },
    },
    "experiments": {
      "ids": [],
      "meta": {
        "activeExperimentId": null,
        "error": false,
        "loading": false,
        "saving": false,
      },
    },
    "genes": {
      "expression": {
        "downsampledCellOrder": [],
        "downsampledMatrix": ExpressionMatrix {
          "geneIndexes": {},
          "rawGeneExpressions": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
          "setGeneExpression": [Function],
          "stats": {
            "rawMean": [],
            "rawStdev": [],
            "truncatedMax": [],
            "truncatedMin": [],
          },
          "truncatedGeneExpressions": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
          "zScore": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
        },
        "error": false,
        "loading": [],
        "matrix": ExpressionMatrix {
          "geneIndexes": {},
          "rawGeneExpressions": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
          "setGeneExpression": [Function],
          "stats": {
            "rawMean": [],
            "rawStdev": [],
            "truncatedMax": [],
            "truncatedMin": [],
          },
          "truncatedGeneExpressions": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
          "zScore": {
            "datatype": undefined,
            "index": [],
            "mathjs": "SparseMatrix",
            "ptr": [
              0,
            ],
            "size": [
              0,
              0,
            ],
            "values": [],
          },
        },
        "views": {},
      },
      "focused": undefined,
      "markers": {
        "ETag": null,
        "error": false,
        "loading": false,
      },
      "properties": {
        "data": {},
        "loading": [],
        "views": {},
      },
      "selected": [],
    },
    "layout": {
      "panel": "Gene list",
      "windows": {
        "direction": "row",
        "first": {
          "direction": "column",
          "first": {
            "direction": "row",
            "first": "UMAP",
            "second": "Cell sets and Metadata",
            "splitPercentage": 60,
          },
          "second": "Heatmap",
          "splitPercentage": 50,
        },
        "second": "Genes",
        "splitPercentage": 70,
      },
    },
    "networkResources": {
      "domainName": "scp.biomage.net",
      "environment": "staging",
    },
    "samples": {
      "meta": {
        "error": false,
        "loading": false,
        "saving": false,
        "validating": [],
      },
    },
    "user": {
      "current": null,
    },
  },
]
`;
